[project]
name = "Remove-Banding-Artifacts"
description = "Fix banding artifacts by re-sampling the latent with a low denoise strength."
version = "1.1.2"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Remove_Banding_Artifacts"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "Remove Banding Artifacts"
Icon = ""
